--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="app">
     <div text align="center">
-        <h1 style="margin: 1em;" >LES DERNIÈRS ARTICLES</h1>
+        <h1 style="margin: 1em;" >LES DERNIERS ARTICLES</h1>
         <h3 style="margin-bottom: 1em; color: crimson">Choisir un auteur</h3>
         <div style="display: inline-block; margin: 1em;" v-for="author in authors">
             <div class="author-toggle">
@@ -21,13 +21,20 @@
                 <label :for="author">Auteur ID: {{ author }}</label>
             </div>
         </div>
+        <div>
+            <input style="text-align: center; width: 50%"
+                   v-model="apiURL"
+                   type="text"
+                   @change="fetchData()"
+                   placeholder="Ajoutez l'url du site">
+        </div>
     </div>
     <div v-if="ready" class="card-columns p-4">
         <div v-for="post in posts">
             <div v-if="currentAuthor == post.author" class="card">
                 <div class="card-body">
                     <img :src="post.img.guid.rendered" class="card-img-top" alt="...">
-                    <h2 class="card-title" v-html="post.title.rendered"></h2>
+                    <h3 class="card-title" v-html="post.title.rendered"></h3>
                     <a :href="post.link" class="btn btn-danger" target="_blank">En savoir plus</a>
                 </div>
             </div>
